--- a/src/app/components/projects/project-details/computer-vision-projects/computer-vision-projects.component.html
+++ b/src/app/components/projects/project-details/computer-vision-projects/computer-vision-projects.component.html
@@ -21,7 +21,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/tomatodesaese2.JPG"
+                  src="./assets/tomatodesaese2.JPG"
                   alt=""
                   class="img-responsive"
                 />
@@ -61,11 +61,7 @@
           <div class="project-column">
             <div class="project-price-row">
               <div class="project-price-wrapper">
-                <img
-                  src="../../../../../assets/face.jpg"
-                  alt=""
-                  class="img-responsive"
-                />
+                <img src="./assets/face.jpg" alt="" class="img-responsive" />
               </div>
             </div>
             <div class="project-row-title">
@@ -107,7 +103,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/traffic_sign.jpg"
+                  src="./assets/traffic_sign.jpg"
                   alt=""
                   class="img-responsive"
                 />
@@ -151,7 +147,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/shipdetection.png"
+                  src="./assets/shipdetection.png"
                   alt=""
                   class="img-responsive"
                 />
