--- a/src/app/components/projects/project-details/datascience-projects/datascience-projects.component.html
+++ b/src/app/components/projects/project-details/datascience-projects/datascience-projects.component.html
@@ -22,7 +22,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/powerbi.JPG"
+                  src="./assets/powerbi.JPG"
                   alt=""
                   class="img-responsive"
                 />
@@ -65,7 +65,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/postgresql.jpeg"
+                  src="./assets/postgresql.jpeg"
                   alt=""
                   class="img-responsive"
                 />
@@ -105,7 +105,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/cassandra.png_large"
+                  src="./assets/cassandra.png_large"
                   alt=""
                   class="img-responsive"
                 />
@@ -146,7 +146,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/covid.JPG"
+                  src="./assets/covid.JPG"
                   alt=""
                   class="img-responsive"
                 />
@@ -193,7 +193,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/abtesting.png"
+                  src="./assets/abtesting.png"
                   alt=""
                   class="img-responsive"
                 />
@@ -228,7 +228,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/churn3.png"
+                  src="./assets/churn3.png"
                   alt=""
                   class="img-responsive"
                 />
@@ -268,7 +268,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/productsaleapp.JPG"
+                  src="./assets/productsaleapp.JPG"
                   alt=""
                   class="img-responsive"
                 />
@@ -305,7 +305,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/houseprice.png"
+                  src="./assets/houseprice.png"
                   alt=""
                   class="img-responsive"
                 />
@@ -348,7 +348,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/comparative.JPG"
+                  src="./assets/comparative.JPG"
                   alt=""
                   class="img-responsive"
                 />
@@ -385,7 +385,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/churn3.png"
+                  src="./assets/churn3.png"
                   alt=""
                   class="img-responsive"
                 />
@@ -431,7 +431,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/customer segmentation.JPG"
+                  src="./assets/customer segmentation.JPG"
                   alt=""
                   class="img-responsive"
                 />
@@ -474,7 +474,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/housesale.JPG"
+                  src="./assets/housesale.JPG"
                   alt=""
                   class="img-responsive"
                 />
