--- a/src/app/components/projects/project-details/frontend-projects/frontend-projects.component.html
+++ b/src/app/components/projects/project-details/frontend-projects/frontend-projects.component.html
@@ -21,7 +21,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/portfolio_latest.JPG"
+                  src="./assets/portfolio_latest.JPG"
                   alt=""
                   class="img-responsive"
                 />
@@ -62,7 +62,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/portfolio1.JPG"
+                  src="./assets/portfolio1.JPG"
                   alt=""
                   class="img-responsive"
                 />
@@ -102,7 +102,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/productsaleapp.JPG"
+                  src="./assets/productsaleapp.JPG"
                   alt=""
                   class="img-responsive"
                 />
@@ -141,7 +141,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/houseprice.png"
+                  src="./assets/houseprice.png"
                   alt=""
                   class="img-responsive"
                 />
