--- a/src/app/components/projects/project-details/machinelearning-projects/machinelearning-projects.component.html
+++ b/src/app/components/projects/project-details/machinelearning-projects/machinelearning-projects.component.html
@@ -21,7 +21,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/spam.jpg"
+                  src="./assets/spam.jpg"
                   alt=""
                   class="img-responsive"
                 />
@@ -64,7 +64,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/nlp.png"
+                  src="./assets/nlp.png"
                   alt=""
                   class="img-responsive"
                 />
@@ -108,7 +108,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/climate.JPG"
+                  src="./assets/climate.JPG"
                   alt=""
                   class="img-responsive"
                 />
@@ -145,7 +145,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/radio.JPG"
+                  src="./assets/radio.JPG"
                   alt=""
                   class="img-responsive"
                 />
@@ -190,7 +190,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/asphalt.JPG"
+                  src="./assets/asphalt.JPG"
                   alt=""
                   class="img-responsive"
                 />
@@ -231,7 +231,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/tumor.JPG"
+                  src="./assets/tumor.JPG"
                   alt=""
                   class="img-responsive"
                 />
