--- a/src/app/components/projects/project-details/software-development-projects/software-development-projects.component.html
+++ b/src/app/components/projects/project-details/software-development-projects/software-development-projects.component.html
@@ -21,7 +21,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/snake.jpeg"
+                  src="./assets/snake.jpeg"
                   alt=""
                   class="img-responsive"
                 />
@@ -58,7 +58,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/turtle_game.webp"
+                  src="./assets/turtle_game.webp"
                   alt=""
                   class="img-responsive"
                 />
@@ -98,7 +98,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/pong_game.png"
+                  src="./assets/pong_game.png"
                   alt=""
                   class="img-responsive"
                 />
@@ -137,7 +137,7 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="../../../../../assets/remote_control.png"
+                  src="./assets/remote_control.png"
                   alt=""
                   class="img-responsive"
                 />
