--- a/src/app/components/courses/courses.component.html
+++ b/src/app/components/courses/courses.component.html
@@ -62,7 +62,7 @@
           <div style="z-index: 100; width: 100%; height: 100%">
             <img
               class="cvframe"
-              src="../../assets/certificates/turgutcertificate.jpeg"
+              src="./assets/certificates/turgutcertificate.jpeg"
               width="100%"
               height="83%"
             />
@@ -122,7 +122,7 @@
           <div style="z-index: 100; width: 100%; height: 100%">
             <img
               class="cvframe"
-              src="../../assets/certificates/gans2.jpg"
+              src="./assets/certificates/gans2.jpg"
               width="100%"
               height="83%"
             />
@@ -185,7 +185,7 @@
           <div style="z-index: 100; width: 100%; height: 100%">
             <img
               class="cvframe"
-              src="../../assets/certificates/deeplearningspecialization.jpg"
+              src="./assets/certificates/deeplearningspecialization.jpg"
               width="100%"
               height="83%"
             />
@@ -241,7 +241,7 @@
           <div style="z-index: 100; width: 100%; height: 100%">
             <img
               class="cvframe"
-              src="../../assets/certificates/gans1.jpg"
+              src="./assets/certificates/gans1.jpg"
               width="100%"
               height="83%"
             />
@@ -303,7 +303,7 @@
           <div style="z-index: 100; width: 100%; height: 100%">
             <img
               class="cvframe"
-              src="../../assets/certificates/PowerBI.jpg"
+              src="./assets/certificates/PowerBI.jpg"
               width="100%"
               height="83%"
             />
@@ -362,7 +362,7 @@
           <div style="z-index: 100; width: 100%; height: 100%">
             <img
               class="cvframe"
-              src="../../assets/certificates/sql.jpg"
+              src="./assets/certificates/sql.jpg"
               width="100%"
               height="83%"
             />
@@ -422,7 +422,7 @@
           <div style="z-index: 100; width: 100%; height: 100%">
             <img
               class="cvframe"
-              src="../../assets/certificates/mit.JPG"
+              src="./assets/certificates/mit.JPG"
               width="100%"
               height="83%"
             />
@@ -480,7 +480,7 @@
           <div style="z-index: 100; width: 100%; height: 100%">
             <img
               class="cvframe"
-              src="../../assets/certificates/phyton.jpg"
+              src="./assets/certificates/phyton.jpg"
               width="100%"
               height="83%"
             />
@@ -542,7 +542,7 @@
           <div style="z-index: 100; width: 100%; height: 100%">
             <img
               class="cvframe"
-              src="../../assets/certificates/datasciencevbo.jpg"
+              src="./assets/certificates/datasciencevbo.jpg"
               width="100%"
               height="83%"
             />
@@ -600,7 +600,7 @@
           <div style="z-index: 100; width: 100%; height: 100%">
             <img
               class="cvframe"
-              src="../../assets/certificates/neuralnetworks.jpg"
+              src="./assets/certificates/neuralnetworks.jpg"
               width="100%"
               height="83%"
             />
@@ -672,7 +672,7 @@
           <div style="z-index: 100; width: 100%; height: 100%">
             <img
               class="cvframe"
-              src="../../assets/certificates/improving.JPG"
+              src="./assets/certificates/improving.JPG"
               width="100%"
               height="83%"
             />
@@ -738,7 +738,7 @@
           <div style="z-index: 100; width: 100%; height: 100%">
             <img
               class="cvframe"
-              src="../../assets/certificates/structuring.JPG"
+              src="./assets/certificates/structuring.JPG"
               width="100%"
               height="83%"
             />
@@ -811,7 +811,7 @@
           <div style="z-index: 100; width: 100%; height: 100%">
             <img
               class="cvframe"
-              src="../../assets/certificates/convolutional.jpg"
+              src="./assets/certificates/convolutional.jpg"
               width="100%"
               height="83%"
             />
@@ -873,7 +873,7 @@
           <div style="z-index: 100; width: 100%; height: 100%">
             <img
               class="cvframe"
-              src="../../assets/certificates/gansspecialization.JPG"
+              src="./assets/certificates/gansspecialization.JPG"
               width="100%"
               height="83%"
             />
