--- a/src/app/components/reference/reference.component.html
+++ b/src/app/components/reference/reference.component.html
@@ -17,7 +17,7 @@
             target="_blank"
           >
             <img
-              src="../../assets/abraham.png"
+              src="./assets/abraham.png"
               alt="reference1"
               class="testimonial-image"
           /></a>
@@ -57,7 +57,7 @@
   <iframe
     id="cvframe"
     class="cvframe"
-    src="../../assets/turgut_reference1.pdf"
+    src="./assets/turgut_reference1.pdf"
     width="100%"
     height="1000px"
   >
