--- a/src/app/components/reference/reference.component.html
+++ b/src/app/components/reference/reference.component.html
@@ -4,13 +4,16 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <h2 class="referencer">
-            Turgut Ozal Guvenc is a talented and dedicated data scientist and
-            machine learning engineer. He has a greate knowledge in software
-            development too, particularly in frontend development. We have
-            worked in several projects together. He is so enthusiastic and has
-            great communication skills. He is an amazing team player and support
-            team members on a great level. I strongly recommend him for your
-            company.
+            We have worked in several projects together with Turgut Ozal Guvenc.
+            Turgut is an amazing person first of all, very enthusiastic,
+            hard-working, and dedicated. I am impressed his data science and
+            machine learning skills and knowledge. His knowledge covers a broad
+            context ranging from data analysis to complex deep learning model
+            training and deployment. He has a comprehensive knowledge in
+            software development too, particularly in frontend development. He
+            is so enthusiastic and has great communication skills. I am pretty
+            sure he will be a great asset in the company he will work. I
+            strongly recommend him for your company.
           </h2>
           <a
             href="https://www.linkedin.com/in/abraham-a-8a22631a5/"
@@ -24,6 +27,45 @@
           <em class="reference-giver"
             >Abraham Anderson - Computer Engineer/Norway</em
           >
+          <iframe
+            id="cvframe"
+            class="cvframe"
+            src="./assets/turgut_reference1.pdf"
+            width="100%"
+            height="1000px"
+          >
+          </iframe>
+        </div>
+        <div class="carousel-item">
+          <h2 class="referencer">
+            Turgut Ozal Guvenc served as a Data Analyst at Vakifbank in
+            lstanbul. He exhibited remarkable proficiency and dedication,
+            developed advanced techniques and intuitive dashboards that
+            facilitated insightful analytics in agricultural and risk management
+            domains, greatly benefiting the bank's operations. He consistently
+            displayed a strong commİtment to excellence, technical proficiency,
+            and a proactive approach to problem-solving. His contributions
+            significantly enhanced our data-driven decision-making capabilities
+            and played a pivotal role in driving strategic initiatives. l am
+            confident that his exceptional skills and dedication make him an
+            ideal candidate for your company.
+          </h2>
+          <a>
+            <img
+              src="./assets/ahmet.jpg"
+              alt="reference1"
+              class="testimonial-image"
+          /></a>
+          <em class="reference-giver">Ahmet Deger - Manager/VakıfBank</em>
+
+          <iframe
+            id="cvframe"
+            class="cvframe"
+            src="./assets/turgut_reference2.pdf"
+            width="100%"
+            height="1000px"
+          >
+          </iframe>
         </div>
       </div>
       <a
@@ -54,12 +96,4 @@
       </a>
     </div>
   </section>
-  <iframe
-    id="cvframe"
-    class="cvframe"
-    src="./assets/turgut_reference1.pdf"
-    width="100%"
-    height="1000px"
-  >
-  </iframe>
 </div>
