--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -14,5 +14,11 @@
     target="_blank"
     >Kaggle</a
   >
+  <a
+    class="footer-link"
+    href="https://www.youtube.com/@turgutguvenc"
+    target="_blank"
+    >YouTube</a
+  >
   <p class="footer-copy">© 2023 Turgut Ozal Guvenc.</p>
 </div>
