--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="col-md-6 profile-details">
       <h1 class="myname">I am Turgut Ozal Guvenc</h1>
-      <p class="occupation">Data Scientist and Frontend Developer</p>
+      <p class="occupation">Data Scientist and Machine Learning Engineer</p>
     </div>
   </div>
 </div>
@@ -13,8 +13,8 @@
   <div class="profile">
     <h2>About</h2>
     <p class="text-about">
-      I am a Frontend Developer and a data scientist in Boston in USA. I like to
-      share my knowledge and codes with frontend software development,
+      I am a Data Scientist and Machine Learning Engineer in Boston in USA. I
+      like to share my knowledge and codes with frontend software development,
       programming, data science, machine learning, and AI on Kaggle and GitHub,
       where I write continuously frontend and backend, machine learning, and
       deep learning codes. I have been ranked 2352. rank among more than 305 000
@@ -30,7 +30,12 @@
       practical experience using React Framework. I have practical experience
       and knowledge in backend development in Python. I am also fluent in
       supportive technologies for software development such as Docker, GIT,
-      Github, JIRA, SQL, and NoSQL databases like MongoDB.
+      Github, JIRA, SQL, and NoSQL databases like MongoDB. I have a
+      <a href="https://www.youtube.com/@turgutguvenc" target="_blank"
+        >YouTube Channel</a
+      >
+      where I continuously share my project in tutorial mode on AI, software
+      development, data science, and machine learning.
     </p>
   </div>
 </div>
