--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -53,6 +53,14 @@
           >
         </li>
         <li class="nav-item">
+          <a
+            class="nav-link"
+            href="https://www.youtube.com/@turgutguvenc"
+            target="_blank"
+            >YouTube Channel</a
+          >
+        </li>
+        <li class="nav-item">
           <a class="nav-link"
             ><mat-slide-toggle
               class="example-margin"
