--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,12 @@
 <div class="top-container">
   <div class="row">
     <div class="col-md-6 profile-image-container">
-      <img class="profile-img" src="./assets/turgut_latest.jpg" alt="" />
+      <img
+        class="profile-img"
+        src="./assets/turgut_latest.jpg"
+        alt=""
+        style="border-radius: 45%"
+      />
     </div>
     <div class="col-md-6 profile-details">
       <h1 class="myname">I am Turgut Ozal Guvenc</h1>
