New Frontend projects are added

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
         class="profile-img"
         src="./assets/turgut_latest.jpg"
         alt=""
-        style="border-radius: 45%"
+        style="border-radius: 45%; width: 100%"
       />
     </div>
     <div class="col-md-6 profile-details">
