--- a/src/app/components/projects/project-details/datascience-projects/datascience-projects.component.html
+++ b/src/app/components/projects/project-details/datascience-projects/datascience-projects.component.html
@@ -22,10 +22,95 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
-                  src="./assets/powerbi.JPG"
+                  src="./assets/aipoweredrestaurantreview.JPG"
                   alt=""
                   class="img-responsive"
                 />
+              </div>
+            </div>
+            <div class="project-row-title">
+              <div class="project_row_title">
+                AI-Powered Restaurant Review Q&A System
+              </div>
+            </div>
+            <figure class="project-row">
+              𝐑𝐞𝐭𝐫𝐢𝐞𝐯𝐚𝐥-𝐚𝐮𝐠𝐦𝐞𝐧𝐭𝐞𝐝 𝐠𝐞𝐧𝐞𝐫𝐚𝐭𝐢𝐨𝐧 (𝐑𝐀𝐆)
+            </figure>
+            <figure class="project-row">
+              <span
+                >Built with ChromaDB for efficient text management and
+                retrieval</span
+              >
+            </figure>
+            <figure class="project-row">
+              Hugging Face's transformers (deepset/minilm-uncased-squad2)
+            </figure>
+            <figure class="project-row">
+              𝐔𝐌𝐀𝐏:Data visualization and 𝐋𝐚𝐧𝐠𝐂𝐡𝐚𝐢𝐧𝐠 : Prompt Engineering
+            </figure>
+            <figure class="project-row">
+              𝐓𝐫𝐚𝐧𝐬𝐟𝐨𝐫𝐦𝐞𝐫𝐬 & 𝐏𝐲𝐓𝐨𝐫𝐜𝐡: NLP & deep learning
+            </figure>
+            <div class="project-footer">
+              <div class="gem-button-container gem-button-position-center">
+                <a
+                  href="https://www.youtube.com/watch?v=0-FSnEIkYdc"
+                  class="gem-button gem-green"
+                  target="_blank"
+                  >See Details</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 project-column-wrapper">
+          <div class="project-column">
+            <div class="project-price-row">
+              <div class="project-price-wrapper">
+                <img
+                  src="./assets/googlerestaurant.JPG"
+                  alt=""
+                  class="img-responsive"
+                />
+              </div>
+            </div>
+            <div class="project-row-title">
+              <div class="project_row_title">Google Map Reviews Analysis</div>
+            </div>
+            <figure class="project-row">
+              customer feedback analysis through Google Maps Reviews
+            </figure>
+            <figure class="project-row">Real-world NLP</figure>
+            <figure class="project-row">
+              TextBlob for Labeling Data for Sentiment Analysis
+            </figure>
+            <figure class="project-row">
+              Visualization for Maping out Customer Sentiment Trends Over Time
+            </figure>
+            <figure class="project-row">
+              Transform Customer Feedbacks into Actionable Insights
+            </figure>
+            <div class="project-footer">
+              <div class="gem-button-container gem-button-position-center">
+                <a
+                  href="https://www.youtube.com/watch?v=Z2z49_LfjIo"
+                  class="gem-button gem-purpel"
+                  target="_blank"
+                  >See Details</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr />
+
+      <div class="row">
+        <div class="col-md-6 project-column-wrapper">
+          <div class="project-column">
+            <div class="project-price-row">
+              <div class="project-price-wrapper">
+                <img src="./assets/powerbi.JPG" alt="" class="img-responsive" />
               </div>
             </div>
             <div class="project-row-title">
@@ -83,6 +168,9 @@
             </figure>
             <figure class="project-row">
               Creating PostgreSQL Database for Storing Data
+            </figure>
+            <figure class="project-row">
+              Incorporating Relations among Entities and Variables
             </figure>
             <div class="project-footer">
               <div class="gem-button-container gem-button-position-center">
@@ -145,11 +233,7 @@
           <div class="project-column">
             <div class="project-price-row">
               <div class="project-price-wrapper">
-                <img
-                  src="./assets/covid.JPG"
-                  alt=""
-                  class="img-responsive"
-                />
+                <img src="./assets/covid.JPG" alt="" class="img-responsive" />
               </div>
             </div>
             <div class="project-row-title">
@@ -227,11 +311,7 @@
           <div class="project-column">
             <div class="project-price-row">
               <div class="project-price-wrapper">
-                <img
-                  src="./assets/churn3.png"
-                  alt=""
-                  class="img-responsive"
-                />
+                <img src="./assets/churn3.png" alt="" class="img-responsive" />
               </div>
             </div>
             <div class="project-row-title">
@@ -384,11 +464,7 @@
           <div class="project-column">
             <div class="project-price-row">
               <div class="project-price-wrapper">
-                <img
-                  src="./assets/churn3.png"
-                  alt=""
-                  class="img-responsive"
-                />
+                <img src="./assets/churn3.png" alt="" class="img-responsive" />
               </div>
             </div>
             <div class="project-row-title">
