--- a/src/app/components/projects/project-details/frontend-projects/frontend-projects.component.html
+++ b/src/app/components/projects/project-details/frontend-projects/frontend-projects.component.html
@@ -21,6 +21,95 @@
             <div class="project-price-row">
               <div class="project-price-wrapper">
                 <img
+                  src="./assets/plantdesease.JPG"
+                  alt=""
+                  class="img-responsive"
+                />
+              </div>
+            </div>
+            <div class="project-row-title">
+              <div class="project_row_title">
+                Plant Desease Detector with React and Flask
+              </div>
+            </div>
+            <figure class="project-row">
+              Model Training with Convolutional Neural Networks (CNNs)
+            </figure>
+            <figure class="project-row">
+              <span>Implementing Transfer Learning with MobileNet</span>
+            </figure>
+            <figure class="project-row">
+              Backend Development and ML Deployment with Phyton
+            </figure>
+            <figure class="project-row">
+              Using Google Cloud for optimal performance
+            </figure>
+            <figure class="project-row">
+              Angular Modules and Integration of Multiple Modules
+            </figure>
+            <div class="project-footer">
+              <div class="gem-button-container gem-button-position-center">
+                <a
+                  href="https://www.linkedin.com/posts/turgut-ozal-guvenc_deeplearning-ai-machinelearning-activity-7156390551905271809-LL6w/?utm_source=share&utm_medium=member_desktop"
+                  class="gem-button gem-green"
+                  target="_blank"
+                  >See Details</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 project-column-wrapper">
+          <div class="project-column">
+            <div class="project-price-row">
+              <div class="project-price-wrapper">
+                <img
+                  src="./assets/moviderecommendation.JPG"
+                  alt=""
+                  class="img-responsive"
+                />
+              </div>
+            </div>
+            <div class="project-row-title">
+              <div class="project_row_title">
+                Movie Recommendation Web App with React and Flask
+              </div>
+            </div>
+            <figure class="project-row">
+              Advanced Integration of HTML, CSS and JavaScript with React
+            </figure>
+            <figure class="project-row">
+              React Interacts with the Flask Backend
+            </figure>
+            <figure class="project-row">
+              Flask Backend use OpenAI's Trained Mode
+            </figure>
+            <figure class="project-row">
+              Generating Tailored Movie Suggestions
+            </figure>
+            <figure class="project-row">
+              Film Oracle feature utilizes OpenAI's ChatGPT
+            </figure>
+            <div class="project-footer">
+              <div class="gem-button-container gem-button-position-center">
+                <a
+                  href="https://www.youtube.com/watch?v=GYxr99iMOK8&t=25s"
+                  class="gem-button gem-purpel"
+                  target="_blank"
+                  >See Details</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="row">
+        <div class="col-md-6 project-column-wrapper">
+          <div class="project-column">
+            <div class="project-price-row">
+              <div class="project-price-wrapper">
+                <img
                   src="./assets/portfolio_latest.JPG"
                   alt=""
                   class="img-responsive"
